--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node server/server.js",
-    "test": "mocha server/tests/*.js  --require @babel/register --exit",
-    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js"
+    "test": "nyc --reporter=html --reporter=text mocha --require @babel/register --exit",
+    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "",
   "license": "ISC",
@@ -22,8 +23,7 @@
     "express-fileupload": "^1.1.5",
     "express-joi-validation": "^2.0.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "moment": "^2.24.0",
-    "nyc": "^14.1.1"
+    "moment": "^2.24.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
@@ -39,6 +39,7 @@
     "eslint": "^6.0.1",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1",
+    "nyc": "^14.1.1",
     "travis-ci": "^2.2.0"
   }
 }
