--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-/node_modules
+
+Un
+#Ignoring node modules folder
+node_modules
+#Ignoring VSCode folder
+.vscode
+#Ignoring NYC Output folder
+.nyc_output
+#Ignoring Coverage folder
+coverage
+#Ignoring Dotenv file
+.env
