--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node server/server.js",
-    "test": "nyc --reporter=html --reporter=text mocha --require @babel/register --exit",
-    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "test": "nyc --reporter=html --reporter=text mocha server/tests/*.js  --require @babel/register --exit",
+    "lint": "eslint server -c .eslintrc --ext js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "dev": "nodemon --exec babel-node --presets babel-preset-env ./server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,13 +17,9 @@
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "dotenv": "^8.0.0",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-airbnb-base": "^13.2.0",
-    "eslint-plugin-import": "^2.18.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
     "express-joi-validation": "^2.0.0",
-    "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.24.0"
   },
   "devDependencies": {
@@ -36,10 +33,19 @@
     "cloudinary": "^1.14.0",
     "config": "^3.1.0",
     "coveralls": "^3.0.4",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
+    "babel-eslint": "^10.0.2",
+    "eslint-config-airbnb": "17.1.1",
+    "eslint-config-babel": "^9.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
     "travis-ci": "^2.2.0"
   }
 }
