--- a/package.json
+++ b/package.json
@@ -13,39 +13,52 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/runtime": "^7.4.5",
     "@hapi/joi": "^15.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.5",
     "express-joi-validation": "^2.0.0",
-    "moment": "^2.24.0"
+    "joi": "^14.3.1",
+    "joi-password-complexity": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "passport": "^0.4.0",
+    "validator": "^11.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.0",
     "@babel/core": "^7.5.0",
     "@babel/node": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.0",
     "@babel/register": "^7.4.4",
+    "babel-eslint": "^10.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cloudinary": "^1.14.0",
     "config": "^3.1.0",
     "coveralls": "^3.0.4",
     "eslint": "^6.1.0",
-    "babel-eslint": "^10.0.2",
     "eslint-config-airbnb": "17.1.1",
+    "eslint-config-airbnb-base": "^13.2.0",
     "eslint-config-babel": "^9.0.0",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "joi-objectid": "^2.0.0",
+    "lodash": "^4.17.15",
     "mocha": "^6.1.4",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.19.1",
     "nyc": "^14.1.1",
+    "password-hash": "^1.2.2",
     "prettier": "^1.18.2",
-    "travis-ci": "^2.2.0"
+    "travis-ci": "^2.2.0",
+    "should": "^13.2.3"
   }
 }
